Fix #363 - TinyMCE: Wrong text alignment in image caption.

--- a/exe/webui/scripts/tinymce_4/js/tinymce/plugins/pastemath/css/content.css
+++ b/exe/webui/scripts/tinymce_4/js/tinymce/plugins/pastemath/css/content.css
@@ -1,6 +1,6 @@
-.exe-math{margin:1.5em 0}
+.exe-math{margin:2em 0}
 .exe-math.position-center{margin:2em auto;text-align:center}
-.position-right{margin:2em 0 2em auto;text-align:right}
+.exe-math.position-right{margin:2em 0 2em auto;text-align:right}
 .float-left{float:left;margin:.5em 1.5em 1em 0}
 .float-right{float:right;margin:.5em 0 1em 2em}
 .exe-math.code-only,.exe-math-img img{box-shadow:0 0 7px 0 rgba(0,0,0,0.5);padding:20px;border-radius:2px}
